--- a/content/microposts/2019-02-17_231222.md
+++ b/content/microposts/2019-02-17_231222.md
@@ -6,4 +6,4 @@
 }
 
 "If you're good at something, you do it" – Peter Smith
-%3C%20link%20href%3D%22The%20First%20Jew%20of%20Foon%22%20content%3D%22https%3A//overcast.fm/%2BIggr_ZuKI%22%20%3E
+{{< link href="The First Jew of Foon" content="https://overcast.fm/+Iggr_ZuKI" >}}
