--- a/content/microposts/2019-02-17_231222.md
+++ b/content/microposts/2019-02-17_231222.md
@@ -6,4 +6,5 @@
 }
 
 "If you're good at something, you do it" – Peter Smith
-{{< link href="The First Jew of Foon" content="https://overcast.fm/+Iggr_ZuKI" >}}
+
+{{< link href="https://overcast.fm/+Iggr_ZuKI" content="https://overcast.fm/+Iggr_ZuKI" >}}
